--- a/UI/index.html
+++ b/UI/index.html
@@ -33,17 +33,17 @@
 	<div class="test">
 		<div class="poo">
 		<p>
-		Poooooooooooooooo<span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span>
+		Test<span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span>
 		</p>
 		</div>
 		<div class="poo">
 		<p>
-		Poooooooooooooooo<span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span>
+		Test<span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span>
 		</p>
 		</div>
 		<div class="poo">
 		<p>
-		Poooooooooooooooo<span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span>
+		Test<span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span> <span>sdfggr</span>
 		</p>
 		</div>
 	</div>
